--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -40,8 +40,12 @@
   <ItemGroup>
     <Compile Include="Answer.cs" />
     <Compile Include="Card.cs" />
+    <Compile Include="ChoiceAnswer.cs" />
+    <Compile Include="ChoiceQuestion.cs" />
     <Compile Include="Collection.cs" />
     <Compile Include="IStorage.cs" />
+    <Compile Include="MatchingAnswer.cs" />
+    <Compile Include="MatchingQuestion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
