--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -38,22 +38,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Answer.cs" />
+    <Compile Include="Answers\Answer.cs" />
     <Compile Include="Card.cs" />
-    <Compile Include="ChoiceAnswer.cs" />
-    <Compile Include="ChoiceQuestion.cs" />
+    <Compile Include="Answers\ChoiceAnswer.cs" />
+    <Compile Include="Questions\ChoiceQuestion.cs" />
     <Compile Include="Collection.cs" />
-    <Compile Include="Extensions.cs" />
+    <Compile Include="Infrastructure\Extensions.cs" />
     <Compile Include="IStorage.cs" />
-    <Compile Include="MatchingAnswer.cs" />
-    <Compile Include="MatchingQuestion.cs" />
+    <Compile Include="Answers\MatchingAnswer.cs" />
+    <Compile Include="Questions\MatchingQuestion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Question.cs" />
-    <Compile Include="Task.cs" />
+    <Compile Include="Questions\Question.cs" />
+    <Compile Include="Exercise.cs" />
     <Compile Include="TestBuilder.cs" />
-    <Compile Include="SimpleAnswer.cs" />
-    <Compile Include="SimpleQuestion.cs" />
+    <Compile Include="Answers\OpenAnswer.cs" />
+    <Compile Include="Questions\OpenAnswerQuestion.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
