--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -68,13 +68,15 @@
     <Compile Include="Questions\ChoiceQuestion.cs" />
     <Compile Include="Collection.cs" />
     <Compile Include="Infrastructure\Extensions.cs" />
-    <Compile Include="IStorage.cs" />
     <Compile Include="Answers\MatchingAnswer.cs" />
     <Compile Include="Questions\MatchingQuestion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Questions\Question.cs" />
     <Compile Include="Exercise.cs" />
+    <Compile Include="Storage\IStorage.cs" />
+    <Compile Include="Storage\Mongo.cs" />
+    <Compile Include="Storage\MongoCollection.cs" />
     <Compile Include="TestBuilder.cs" />
     <Compile Include="Answers\OpenAnswer.cs" />
     <Compile Include="Questions\OpenAnswerQuestion.cs" />
