--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -74,9 +74,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Questions\Question.cs" />
     <Compile Include="Exercise.cs" />
-    <Compile Include="Storage\IStorage.cs" />
-    <Compile Include="Storage\Mongo.cs" />
-    <Compile Include="Storage\MongoCollection.cs" />
+    <Compile Include="Storages\IStorage.cs" />
+    <Compile Include="Storages\IAnswersStorage.cs" />
+    <Compile Include="Storages\MongoAnswers.cs" />
+    <Compile Include="Storages\MongoAnswersStorage.cs" />
+    <Compile Include="Storages\MongoStorage.cs" />
+    <Compile Include="Storages\MongoCollection.cs" />
     <Compile Include="TestBuilder.cs" />
     <Compile Include="Answers\OpenAnswer.cs" />
     <Compile Include="Questions\OpenAnswerQuestion.cs" />
