--- a/FlashcardsTests/packages.config
+++ b/FlashcardsTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DnsClient" version="1.2.0" targetFramework="net472" />
+  <package id="FakeItEasy" version="5.1.1" targetFramework="net472" />
   <package id="MongoDB.Bson" version="2.9.0-beta1" targetFramework="net472" />
   <package id="MongoDB.Driver" version="2.9.0-beta1" targetFramework="net472" />
   <package id="MongoDB.Driver.Core" version="2.9.0-beta1" targetFramework="net472" />
