--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -65,7 +65,11 @@
     <Compile Include="Answers\Answer.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Answers\ChoiceAnswer.cs" />
+    <Compile Include="IExerciseGenerator.cs" />
     <Compile Include="IOwnedResource.cs" />
+    <Compile Include="MatchingQuestionExerciseGenerator.cs" />
+    <Compile Include="NewTestBuilder.cs" />
+    <Compile Include="OpenQuestionExerciseGenerator.cs" />
     <Compile Include="Questions\ChoiceQuestion.cs" />
     <Compile Include="Collection.cs" />
     <Compile Include="Infrastructure\Extensions.cs" />
