--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -65,10 +65,11 @@
     <Compile Include="Answers\Answer.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Answers\ChoiceAnswer.cs" />
+    <Compile Include="ICardsSelector.cs" />
     <Compile Include="IExerciseGenerator.cs" />
     <Compile Include="IOwnedResource.cs" />
     <Compile Include="MatchingQuestionExerciseGenerator.cs" />
-    <Compile Include="NewTestBuilder.cs" />
+    <Compile Include="TestBuilder.cs" />
     <Compile Include="OpenQuestionExerciseGenerator.cs" />
     <Compile Include="Questions\ChoiceQuestion.cs" />
     <Compile Include="Collection.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Questions\Question.cs" />
     <Compile Include="Exercise.cs" />
+    <Compile Include="RandomCardsSelector.cs" />
     <Compile Include="Storages\DumbUserStorage.cs" />
     <Compile Include="Storages\IStorage.cs" />
     <Compile Include="Storages\IAnswersStorage.cs" />
@@ -87,7 +89,7 @@
     <Compile Include="Storages\MongoAnswersStorage.cs" />
     <Compile Include="Storages\MongoStorage.cs" />
     <Compile Include="Storages\MongoCollection.cs" />
-    <Compile Include="TestBuilder.cs" />
+    <Compile Include="ObsoleteTestBuilder.cs" />
     <Compile Include="Answers\OpenAnswer.cs" />
     <Compile Include="Questions\OpenAnswerQuestion.cs" />
     <Compile Include="User.cs" />
