--- a/FlashcardsTests/FlashcardsTests.csproj
+++ b/FlashcardsTests/FlashcardsTests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="MongoShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBuilderShould.cs" />
+    <Compile Include="TestGenerationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
