--- a/Flashcards/Flashcards.csproj
+++ b/Flashcards/Flashcards.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Answers\Answer.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Answers\ChoiceAnswer.cs" />
+    <Compile Include="Test.cs" />
     <Compile Include="TestBuilding\ChoiceQuestionExerciseGenerator.cs" />
     <Compile Include="TestBuilding\ICardsSelector.cs" />
     <Compile Include="TestBuilding\IExerciseGenerator.cs" />
@@ -84,10 +85,9 @@
     <Compile Include="Exercise.cs" />
     <Compile Include="TestBuilding\RandomCardsSelector.cs" />
     <Compile Include="Storages\ICardStorage.cs" />
-    <Compile Include="Storages\IAnswerStorage.cs" />
+    <Compile Include="Storages\ITestStorage.cs" />
     <Compile Include="Storages\IUserStorage.cs" />
-    <Compile Include="Storages\MongoAnswers.cs" />
-    <Compile Include="Storages\MongoAnswerStorage.cs" />
+    <Compile Include="Storages\MongoTestStorage.cs" />
     <Compile Include="Storages\MongoCardStorage.cs" />
     <Compile Include="Storages\MongoUserStorage.cs" />
     <Compile Include="Answers\OpenAnswer.cs" />
