--- a/FlashcardsClient/FlashcardsClient.csproj
+++ b/FlashcardsClient/FlashcardsClient.csproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="RestSharp" Version="106.6.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Flashcards\Flashcards.csproj" />
   </ItemGroup>
 
 </Project>
