Add deployment configuration

--- a/FlashcardsApi/appsettings.json
+++ b/FlashcardsApi/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
+  "MongoDB": {
+    "Host": "localhost",
+    "Port": 27017,
+    "User": "root",
+    "Password": "example"
+  },
   "AllowedHosts": "*"
 }
