--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,48 @@
-version: '2'
+version: '3.1'
+
 volumes:
-    mongodbdata:
-        external: false
+  mongodbdata:
+    external: false
 
 services:
-    mongodb:
-        image: mongo
-        volumes:
-          - 'mongodbdata:/data'
-        ports:
-          - '27017:27017'
-        command: mongod --smallfiles --logpath=/dev/null
+  mongo:
+    image: mongo
+    restart: always
+    volumes:
+      - 'mongodbdata:/data'
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    networks:
+      - flashcards
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_BASICAUTH_USERNAME: lol
+      ME_CONFIG_BASICAUTH_PASSWORD: lol
+    depends_on:
+      - mongo
+    networks:
+      - flashcards
+
+  flashcards-api:
+    build: .
+    restart: always
+    ports:
+      - 5000:80
+    environment:
+      MongoDB__Host: mongo
+    depends_on:
+      - mongo
+    networks:
+      - flashcards
+
+networks:
+  flashcards:
+    driver: bridge
