Add mongo development config

--- a/FlashcardsApi/appsettings.json
+++ b/FlashcardsApi/appsettings.json
@@ -6,9 +6,7 @@
   },
   "MongoDB": {
     "Host": "localhost",
-    "Port": 27017,
-    "User": "root",
-    "Password": "example"
+    "Port": 27017
   },
   "AllowedHosts": "*"
 }
