--- a/FlashcardsApi/appsettings.Development.json
+++ b/FlashcardsApi/appsettings.Development.json
@@ -5,5 +5,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "MongoDB": {
+    "Host": "localhost",
+    "Port": 27017
   }
 }
