--- a/FlashcardsApi/FlashcardsApi.csproj
+++ b/FlashcardsApi/FlashcardsApi.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="MongoDB.Driver" Version="2.9.0-beta1" />
+    <PackageReference Include="Scrutor" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
